# gstreamer-plugins-rust

./: Cargo.toml  LICENSE
src/: lib.rs
src/rgb2gray/: imp.rs  mod.rs
